feat: ResultProcessor Implementation
