# controllers/resultProcessorController.js
@@ -3,21 +3,25 @@
 var resultProcessorService = require('./resultProcessorService');
 
 
-module.exports.getResultProcessorsByJob = function getResultProcessorsByJob(req, res, next) {
-  resultProcessorService.getResultProcessorsByJob(req.swagger.params, res, next);
+module.exports.getJobResultProcessors = function getJobResultProcessors(req, res, next) {
+  resultProcessorService.getJobResultProcessors(req.swagger.params, res, next);
 };
 
-module.exports.findResultProcessorById = function findResultProcessorById(req, res, next) {
-  resultProcessorService.findResultProcessorById(req.swagger.params, res, next);
+module.exports.addJobResultProcessor = function addJobResultProcessor(req, res, next) {
+  resultProcessorService.addJobResultProcessor(req.swagger.params, res, next);
+};
+
+module.exports.findJobResultProcessorByName = function findJobResultProcessorByName(req, res, next) {
+  resultProcessorService.findJobResultProcessorByName(req.swagger.params, res, next);
 };
 
 
-module.exports.processResultProcessorById = function processResultProcessorById(req, res, next) {
-  resultProcessorService.processResultProcessorById(req.swagger.params, res, next);
+module.exports.processResultProcessor = function processResultProcessor(req, res, next) {
+  resultProcessorService.processResultProcessor(req.swagger.params, res, next);
 };
 
-module.exports.deleteResultProcessor = function deleteResultProcessor(req, res, next) {
-  resultProcessorService.deleteResultProcessor(req.swagger.params, res, next);
+module.exports.deleteJobResultProcessor = function deleteJobResultProcessor(req, res, next) {
+  resultProcessorService.deleteJobResultProcessor(req.swagger.params, res, next);
 };
 
 module.exports.updateResultProcessor = function updateResultProcessor(req, res, next) {
